--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,11 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    </style>
+
+    <!-- Base application theme. -->
+    <style name="MainActivityTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+        <item name="android:background">@android:color/white</item>
     </style>
 
 </resources>
