--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -6,15 +6,6 @@
               android:layout_height="match_parent"
                 android:padding="@dimen/activity_horizontal_margin">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/device_is_ok"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:paddingBottom="@dimen/activity_half_margin"
-        android:gravity="center"/>
-
     <ListView
         android:id="@+id/eventsListView"
         android:layout_width="match_parent"
@@ -40,6 +31,7 @@
             android:text="@string/record"/>
 
         <TextView
+            android:id="@+id/timeCounter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/activity_half_margin"
@@ -47,12 +39,24 @@
             android:layout_weight="1"/>
 
         <Button
+            android:id="@+id/startButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/activity_half_margin"
             android:text="@string/start"
-            android:background="#4682B4"/>
+            android:background="@drawable/button_selector"/>
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/device_is_bad"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:background="#AFEEEE"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:gravity="center"/>
 
 </LinearLayout>
