--- a/app/src/main/res/layout/fragment_indicators.xml
+++ b/app/src/main/res/layout/fragment_indicators.xml
@@ -7,6 +7,7 @@
               android:padding="@dimen/activity_horizontal_margin">
 
     <LinearLayout
+        android:id="@+id/pulseLayout"
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,9 +33,17 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
 
+        <com.androidplot.xy.XYPlot
+            android:id="@+id/pulsePlot"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
+            androidPlot.graphWidget.gridLinePaint.color="#000000"/>
+
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/stressLayout"
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,9 +68,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
+
+        <com.androidplot.xy.XYPlot
+            android:id="@+id/stressPlot"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
+            androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
+            androidPlot.legendWidget.heightMetric.value="25dp"
+            androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
+            androidPlot.graphWidget.gridLinePaint.color="#000000"/>
+
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/activityLayout"
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -101,6 +122,17 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
+
+        <com.androidplot.xy.XYPlot
+            android:id="@+id/activityPlot"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
+            androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
+            androidPlot.legendWidget.heightMetric.value="25dp"
+            androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
+            androidPlot.graphWidget.gridLinePaint.color="#000000"/>
+
     </LinearLayout>
 
 </LinearLayout>
