добавил отображение статуса при подключении, картинки, поправил отображение графиков при переходах.

--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -49,6 +49,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/deviceState"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/device_is_bad"
