--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="main_background">#AFEEEE</color>
+    <color name="second_background">#4682B4</color>
 </resources>
