--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="main_background">#AFEEEE</color>
     <color name="second_background">#4682B4</color>
+
+    <color name="transparent">#0000FFFF</color>
 </resources>
