--- a/app/src/main/res/layout/fragment_indicators.xml
+++ b/app/src/main/res/layout/fragment_indicators.xml
@@ -18,16 +18,19 @@
         android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/pulseInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/test"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Пульс (bpm)"/>
 
             <TextView
                 android:id="@+id/pulseCounter"
+                android:tag="pulse"
                 android:paddingLeft="@dimen/activity_half_margin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -59,6 +62,7 @@
         android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/stressInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -69,6 +73,7 @@
 
             <TextView
                 android:id="@+id/stressCounter"
+                android:tag="stress"
                 android:paddingLeft="@dimen/activity_half_margin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -100,6 +105,7 @@
         android:layout_weight="1">
 
         <RelativeLayout
+            android:id="@+id/activityInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -111,6 +117,7 @@
             <TextView
                 android:id="@+id/activityCounter"
                 android:paddingLeft="@dimen/activity_half_margin"
+                android:tag="activity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/acTitle"/>
@@ -125,6 +132,7 @@
 
             <TextView
                 android:id="@+id/stepCounter"
+                android:tag="stepCounter"
                 android:paddingLeft="@dimen/activity_half_margin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
